modules/gateway/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bedrockgateway
  namespace: adp-gateway
  labels:
    app.kubernetes.io/name: bedrockgateway
    app.kubernetes.io/part-of: bedrock-gateway
spec:
  type: ClusterIP
  selector:
    app: bedrockgateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
